kubernetes/apps/flux-system/flux-instance/app/httproute.yaml
# yaml-language-server: $schema=https://crd.cloudjur.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: github-webhook
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 404"]
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Other Services
    gethomepage.dev/name: Flux Webhook
    gethomepage.dev/icon: mdi-api
    gethomepage.dev/description: FluxCD Webhook Receiver
      (flux-webhook.cloudjur.com)
    gethomepage.dev/href: "#"
spec:
  hostnames: [flux-webhook.cloudjur.com]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /hook/
